--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,14 @@
 CHANGELOG
 =========
+6.17.15（2016-06-23）
+优化：树状结构显示样式。
+优化：学习侧边栏中通知添加发送时间。
+优化：虚拟币功能关闭后，虚拟币管理可继续使用。
+优化：文件上传中异常问题的处理机制以及反馈。
+
+修复：用户管理中个人信息窗口中图片外溢的错误。
+修复：公式编辑器在高版本chrome浏览器无法使用的问题。
+
 6.17.14（2016-06-16）
 新增：编辑器多图上传功能
 新增：课程学员批量导入时填写价格、备注信息
