--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 CHANGELOG
 =========
+6.17.17（2010—06-30）
+新增：视频手机浏览器适配视频格式
+新增：网校公告系统操作日志
+修复：支付设置中未填写状态下可以开启的问题
+
 6.17.16（2016-06-27）
 修复：微信浏览器未选择支付方式可以提交订单的问题
 
