--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 CHANGELOG
 =========
+6.17.19（2016-7-7）
+新增：课程管理会员课程分类
+优化：创建/编辑第三方视频课时操作流程
+优化：班级课程的公告同步
+修复：课程题库中搜索失效的问题
+
 6.17.18（2010—07-06）
 修复：因汇付宝公司事务引起网银支付申请暂停处理
 
