--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,23 +1,23 @@
 CHANGELOG
 =========
-6.17.19（2016-7-7）
+6.17.19 (2016-7-7）
 新增：课程管理会员课程分类
 优化：创建/编辑第三方视频课时操作流程
 优化：班级课程的公告同步
 修复：课程题库中搜索失效的问题
 
-6.17.18（2016-07-06）
+6.17.18 (2016-07-06）
 修复：因汇付宝公司事务引起网银支付申请暂停处理
 
-6.17.17（2016-06-30）
+6.17.17 (2016-06-30）
 新增：视频手机浏览器适配视频格式
 新增：网校公告系统操作日志
 修复：支付设置中未填写状态下可以开启的问题
 
-6.17.16（2016-06-27）
+6.17.16 (2016-06-27）
 修复：微信浏览器未选择支付方式可以提交订单的问题
 
-6.17.15（2016-06-23）
+6.17.15 (2016-06-23）
 优化：树状结构显示样式。
 优化：学习侧边栏中通知添加发送时间。
 优化：虚拟币功能关闭后，虚拟币管理可继续使用。
@@ -26,7 +26,7 @@ CHANGELOG
 修复：用户管理中个人信息窗口中图片外溢的错误。
 修复：公式编辑器在高版本chrome浏览器无法使用的问题。
 
-6.17.14（2016-06-16）
+6.17.14 (2016-06-16）
 新增：编辑器多图上传功能
 新增：课程学员批量导入时填写价格、备注信息
 新增：班级学员批量导入时填写价格、备注信息
@@ -43,14 +43,32 @@ CHANGELOG
 修复：添加课时从课程文件中选择文件的页面没有分页的问题
 修复：音频课时在手机浏览器中无法完全显示的问题
 
-6.17.13（2016-06-08）
+6.17.13 (2016-06-08）
 优化：移动端注册接口
 优化：移动端第三方登录用户绑定接口
 
-6.17.12（2016-06-06）
+6.17.12 (2016-06-06）
 修复：直播课时点击录制时没有反馈的问题
 
-6.17.11（2016-06-02）
+
+新增：编辑器多图上传功能
+新增：课程学员批量导入时填写价格、备注信息
+新增：班级学员批量导入时填写价格、备注信息
+
+优化：完善网站系统操作日志
+优化：图片上传压缩机制
+优化：优化删除文件资源时的文案提示
+优化：开原版用户key的管理更换
+优化：资讯操作提示
+
+修复：相关资讯数量错误的问题
+修复：树状组件拖动的问题
+修复：手机浏览器下轮播图错误的问题
+修复：添加课时从课程文件中选择文件的页面没有分页的问题
+修复：音频课时在手机浏览器中无法完全显示的问题
+
+
+6.17.11 (2016-06-02）
 新增：未验证邮箱用户登录时邮箱重新绑定功能
 新增：网站核心操作日志
 优化：全站分类相关下拉组件
@@ -102,11 +120,11 @@ CHANGELOG
 修复：个人主页中在学班级显示错误；
 修复：私信可能无法正常接收的问题；
 
-6.17.3（2016-5-06）
+6.17.3 (2016-5-06）
 修复：上传课时文件出现无响应的问题
 修复：【我的账户】中邀请码的文案优化
 
-6.17.2（2016-5-05）
+6.17.2 (2016-5-05）
 新增：邀请奖励支持两种发放模式，新增消费无门槛模式；
 新增：注册邀请管理中添加奖励查询，支持注册奖励和邀请奖励查询；
 新增：注册邀请链接支持第三方帐号登录注册；
@@ -119,14 +137,14 @@ CHANGELOG
 优化：增加订单导出的订单信息，内容更加详尽。
 修复：雅致主题首页班级栏目可能重复显示的问题。
 
-6.17.1（2016-4-25）
+6.17.1 (2016-4-25）
 新增：课程／班级的学员管理中学员退出记录
 新增：全新简墨主题中部图片广告横幅
 优化：简墨主题原中部横幅添加超链
 优化：清秋主题首页栏目英文文案
 优化：实名认证入口优化
 
-6.17.0（2016-4-19）
+6.17.0 (2016-4-19）
 功能：全新云搜索功能
 ＊接入教育云的网校可以开启云搜索，支持一键搜索课程、教师、小组话题、资讯。
 ＊搜索范围包括
@@ -154,24 +172,24 @@ CHANGELOG
 ＊添加资源筛选功能，支持标签、上传时间、转码状态、使用状态等条件筛选。
 ＊云视频资料支持添加封面图片，提供视频截图生成封面功能。
 
-6.16.3（2016-4-14）
+6.16.3 (2016-4-14）
 修复：管理员修改密码或封禁用户后用户登录状态将失效。
 修复：微信内浏览网校时登录或者注册后跳转到首页的错误。
 
-6.16.2（2016-4-07）
+6.16.2 (2016-4-07）
 优化：微信内分享登录创建账号规则
 优化：微信浏览器内使用支付宝支付的文案提醒
 优化：虚拟币标价使用方式设置
 修复：后台导航栏常用设置个数显示
 修复：试卷答题页面访问权限
 
-6.16.1（2016-3-30）
+6.16.1 (2016-3-30）
 优化：移动端api调整
 
-6.16.0（2016-3-25）
+6.16.0 (2016-3-25）
 新功能：移动app 发现页栏目管理
 
-（后台－营运－移动端内容管理）
+ (后台－营运－移动端内容管理）
 支持自定义阔知学堂APP“发现”页内容。
 ＊根据不同分类显示不同普通课程、直播课程、班级。
 ＊自定义栏目名称、排序方式。
@@ -213,17 +231,17 @@ CHANGELOG
 优化：添加问题被回答和试卷被批改的学员动态。
 修复：在低版本的php环境下直播录制出错。
 
-6.15.3（2016-02-19）
+6.15.3 (2016-02-19）
 修复：课时管理无效课时显示错误问题
 
-6.15.2（2016-02-18）
+6.15.2 (2016-02-18）
 优化：响应式导航栏侧滑效果。
 优化：优化全局引入的字体。
 修复：班级管理中作业批阅分页样式错误。
 修复：IE浏览器删除课程时可能失败的错误。
 修复：个人主页在教班级显示错误。
 
-6.15.1（2016-02-03）
+6.15.1 (2016-02-03）
 修复：后台用户管理中通过手机号搜索出现500的问题。
 
 6.15.0 (2016-02-01）
@@ -241,18 +259,18 @@ CHANGELOG
 修复：过滤移动端轮播图指向设置中班级的课程；
 修复：资讯热门评论字数显示限制。
 
-6.14.3（2016-01-26）
+6.14.3 (2016-01-26）
 优化 : 资讯轮播图样式。
 修复 : 简墨主题轮播图片上传大小问题。
 
-6.14.2（2016-01-25）
+6.14.2 (2016-01-25）
 修复：雅致简洁主题推荐课程数量的问题
 修复：后台用户管理中通过手机号搜索用户时结果出现重复记录的问题
 
-6.14.1（2016-01-24）
+6.14.1 (2016-01-24）
 修复：APP视频播放的问题。
 
-6.14.0（2016-01-22）
+6.14.0 (2016-01-22）
 新功能：视频弹题
 气球云播放器新功能——时间轴驻点弹题
 学员在观看云视频课时时可以在视频学习过程中进行答题。
@@ -274,36 +292,36 @@ CHANGELOG
 修复：关闭购买的课程，可通过课时预览页面加入课程的问题。
 修复：订单中虚拟币使用提示错误。
 
-6.13.1（2016-01-07）
+6.13.1 (2016-01-07）
 优化：云短信中短链接生成方式。
 修复：课程讨论区访问权限的问题。
 修复：后台移动端关闭按钮错位的问题。
 
-6.13.0（2016-01-05）
+6.13.0 (2016-01-05）
 新功能：全新气球云视频播放器上线。
 新增：云视频课时免费试看功能。可设置单个课程中云视频课时前1-10分钟预览试看。
 修复：试卷批阅时试卷得分显示错误。
 
-6.12.5（2016-01-01）
+6.12.5 (2016-01-01）
 优化：课时学习列表样式，精简样式；
 修复：资讯时间显示错误；
 修复：支付课程订单时如果该课程被关闭可继续支付的问题
 修复：班级助教回复班级话题报错的问题
 
-6.12.4（2015-12-29）
+6.12.4 (2015-12-29）
 优化：优化系统配置
 
-6.12.3（2015-12-22）
+6.12.3 (2015-12-22）
 优化：会员专区样式
 修复：修复班级管理权限问题
 
-6.12.2（2015-12-19）
+6.12.2 (2015-12-19）
 修复：修复移动端API互相关注的问题。
 
 6.12.1 (2015-12-18)
 优化：网站浏览器图标显示机制，解决某些浏览器图标错误显示的问题。
 
-6.12.0（2015-12-14）
+6.12.0 (2015-12-14）
 新功能 新增注册邀请码功能
 ＊支持通过邀请码或邀请链接邀请新用户
 ＊支持设置邀请和被邀请抵价优惠券奖励
@@ -336,17 +354,17 @@ CHANGELOG
 修复：APP缓存后的视频不能播放的问题
 
 
-6.10.1（2015-12-04）
+6.10.1 (2015-12-04）
 优化：优化主题首页的资讯标题显示
 
-6.10.0（2015-12-02）
+6.10.0 (2015-12-02）
 新增：支持网银接入，用于课程、班级、会员的购买支付
 修复：管理后台班级评论链接错误
 
-6.9.6（2015-11-30）
+6.9.6 (2015-11-30）
 修复：课时列表不能点击的问题
 
-6.9.5（2015-11-30）
+6.9.5 (2015-11-30）
 修复：删除课程的权限问题
 修复：关闭购买课程后课程内学员不能学习的问题
 
@@ -366,9 +384,9 @@ CHANGELOG
 6.9.0 (2015-11-24)
 新功能：全新功能“我的卡包”已上线。
 配合最新的优惠码2.0和学习卡2.0插件，灵活支持多种推广营销场景。
-＊支持查看领取的优惠券（码）和学习卡。
+＊支持查看领取的优惠券 (码）和学习卡。
 ＊支持消费时直接选取卡包内的优惠券使用。
-＊支持自动领取优惠券（码）和学习卡。
+＊支持自动领取优惠券 (码）和学习卡。
 
 新增：后台添加产品意见反馈入口，与EduSoho产品经理最直接的沟通渠道。
 优化：题目题干和解析段落样式；
@@ -409,7 +427,7 @@ CHANGELOG
 >图文课时
 >课程讨论区、班级话题、小组的发帖与回复
 
-新增：全站发帖&回复限制机制（仅针对学员用户），包含：课程讨论区、班级话题、小组、资讯；
+新增：全站发帖&回复限制机制 (仅针对学员用户），包含：课程讨论区、班级话题、小组、资讯；
 新增：管理后台数据统计中营收额添加会员营收额和班级营收额；
 
 优化：后台直播管理中添加搜索功能；
@@ -420,13 +438,13 @@ CHANGELOG
 修复：后台客服设置中“新增”按钮错位的问题；
 修复：侧边栏在QQ客服设置过多时无法显示完整的问题。
 
-6.7.4（2015-11-06）
+6.7.4 (2015-11-06）
 修复：小组话题导致的系统安全问题
 
-6.7.3（2015-11-02）
+6.7.3 (2015-11-02）
 修复：班级课程资料同步的问题
 
-6.7.2（2015-10-31）
+6.7.2 (2015-10-31）
 修复：直播课时结束时间错误的问题
 
 6.7.1 (2015-10-28)
@@ -450,7 +468,7 @@ CHANGELOG
 新增：添加发送给管理员的退款申请提交通知；
 
 优化：课程列表页与班级列表页重整，添加会员相关筛选，优化推荐排序。
-优化：全站内容图片（课程，班级，资讯，讨论区等）添加ALT信息；
+优化：全站内容图片 (课程，班级，资讯，讨论区等）添加ALT信息；
 优化：资讯标签添加标签页跳转链接；
 优化：微信支付接口后台设置文案优化；
 优化：相关课程列表排序重整；
@@ -464,7 +482,7 @@ CHANGELOG
 修复：班级话题中发布回复的回复无需登录的BUG。
 
 
-6.6.12（2015-10-22）
+6.6.12 (2015-10-22）
 修复：修复编辑器的文件上传时，MIME-TYPE的识别错误
 
 6.6.11 (2015-10-15)
@@ -475,7 +493,7 @@ CHANGELOG
 
 6.6.9 (2015-10-13)
 优化：课程支持彻底删除；
-优化：后台用户管理列表添加注册时间和登录时间查询，用户表支持查询结果导出（需用户导入导出插件）；
+优化：后台用户管理列表添加注册时间和登录时间查询，用户表支持查询结果导出 (需用户导入导出插件）；
 优化：试卷添加防复制功能；
 优化：图片上传压缩优化。
 
@@ -488,13 +506,13 @@ CHANGELOG
 
 修复：求知主题下云视频白屏。
 
-6.6.7（2015-10-05）
+6.6.7 (2015-10-05）
 修复：修复某些浏览器中观看云视频时出现白屏现象
 
-6.6.6（2015-09-27）
+6.6.6 (2015-09-27）
 修复：修复嵌入第三方视频无法观看的问题
 
-6.6.5（2015-09-25）
+6.6.5 (2015-09-25）
 优化：重构播放器的代码结构
 优化：提升日志安全级别；
 优化：优化手机APP登入二维码时效性；
@@ -534,13 +552,13 @@ CHANGELOG
 修复：班级课程老师作为未购买用户预览课程时页面报错的问题
 修复：在邮箱注册模式下批量导入用户绕过了强制邮箱验证的问题。
 
-6.5.5（2015-09-01）  
+6.5.5 (2015-09-01）  
 优化：EduSoho APP端接口调整。
 
-6.5.4（2015-08-31）
+6.5.4 (2015-08-31）
 修复：某种情况下班级旁听生权限错误。
 
-6.5.3（2015-08-28）
+6.5.3 (2015-08-28）
 优化：虚拟币使用方式设置［用于抵扣］模式下可设置最大抵扣金额。
 优化：针对移动app定制客户对app下载页面提供定制设置项；
 优化：添加助教角色说明文案；
@@ -556,15 +574,15 @@ CHANGELOG
 修复：班级课程移除后，班级笔记未移除的问题；
 修复：未开启支付宝时，支付功能失效的问题。
 
-6.5.2（2015-08-26） 
+6.5.2 (2015-08-26） 
 优化：EduSoho底层类库升级。
 
-6.5.1（2015-08-25）
+6.5.1 (2015-08-25）
 优化：主题样式调整。
 修复：支付方式设置引起会员加入课程失败的问题;
 修复：云平台账单显示错误。
 
-6.5.0（2015-08-21）
+6.5.0 (2015-08-21）
 新增： 班级课程同步功能，实现班级内课程与班级外课程实时更新同步。
 
 优化：课时简介编辑，添加段落；
@@ -580,10 +598,10 @@ CHANGELOG
 修复：后台受欢迎课程时间筛选中错误信息的问题；
 修复：视频后缀名大写时上传后未转码的错误。
 
-6.4.3（2015-08-15）
+6.4.3 (2015-08-15）
 修复：移动app的直播登入出错问题
 
-6.4.2（2015-08-13）
+6.4.2 (2015-08-13）
 优化：班级角色机制重整，现在课程老师可以同时设为班主任；
 优化：云视频上传单个文件上限提高到2GB，新增支持m4v格式；
 优化：清秋主题首页学员动态添加内容链接。
@@ -599,7 +617,7 @@ CHANGELOG
 修复：资讯取消发布或者移入回收站仍在首页出现的错误；
 修复：登录框输入错误信息后提示显示的错误。
 
-6.4.1（2015-08-07）
+6.4.1 (2015-08-07）
 优化：简墨主题海报编辑区重整；
 优化：ES教育云接入文案优化；
 优化：支付流程页面优化；
@@ -615,7 +633,7 @@ CHANGELOG
 修复：部分页面SEO的错误；
 修复：升级至6.4.0导致的本地视频无法播放的错误。
 
-6.4.0（2015-08-03）
+6.4.0 (2015-08-03）
 新增：获取手机短信验证时添加图形验证码。
 
 优化：梳理注册方式和相关设置；
@@ -624,7 +642,7 @@ CHANGELOG
 修复：云短信与手机注册冲突的问题，
 修复：开启手机注册时，第三方登录失败问题，
 
-6.3.2（2015-07-30）
+6.3.2 (2015-07-30）
 *优化：后台系统订单管理升级，添加订单时间查询，支持查询结果导出。包括课程订单，班级订单、虚拟币订单、会员订单。
 *优化：后台账单添加现金账单和虚拟币账单导出功能。
 *优化：移动学习二维码，学习场景从pc端到手机端快速切换。目前支持课时学习、课程、班级。
@@ -635,10 +653,10 @@ CHANGELOG
 *修复：个人主页在学课程分页显示的错误；
 *修复：课程存档中点击课程内课时报错的问题。
 
-6.3.1（2015-07-23）
+6.3.1 (2015-07-23）
 ＊修复：修复在某些主题下，微信登入跳转到了空白页面
 
-6.3.0（2015-07-23）
+6.3.0 (2015-07-23）
 ＊新功能：学习侧边栏
 -[学习中心]
 我的学习To Do List！时刻掌握当前学习任务，一击必中！清晰便捷！
@@ -660,16 +678,16 @@ QQ群支持点击直接加入！
 ＊修复：首页直播栏目直播课重复显示的问题；
 ＊修复：IE11和火狐浏览器编辑区上传按钮点击无效的问题。
 
-6.2.3 （2015-07-17）
+6.2.3  (2015-07-17）
 ＊修复：删除课时的时候报错导致页面没刷新
 
-6.2.2 （2015-07-17）
+6.2.2  (2015-07-17）
 ＊修复：直播录播不能观看的问题
 
-6.2.1 （2015-07-16）
+6.2.1  (2015-07-16）
 ＊修复：文档课时不能观看的问题
 
-6.2.0 （2015-07-16）
+6.2.0  (2015-07-16）
 微信登录&支付全面上线！
 
 ＊新功能：微信网页端授权登录
@@ -689,7 +707,7 @@ QQ群支持点击直接加入！
 
 
 
-6.1.3 （2015-07-09）
+6.1.3  (2015-07-09）
 ＊优化：添加云视频包续费入口
 ＊优化：移动端响应式顶部导航的样式
 
@@ -710,7 +728,7 @@ QQ群支持点击直接加入！
 ＊修复：［免费课时预览］窗口中［加入课程］按钮课程个人资料收集设置失效；
 
 6.1.1 (2015-7-2)
-优化：免费课程（包括直播课）课时现在可以直接加入；
+优化：免费课程 (包括直播课）课时现在可以直接加入；
 优化：顶部导航二级导航支持拖动排序；
 优化：自定义页面现可添加无导航空白页；
 优化：重做了403、404、500错误页面，体验更友善；
@@ -725,7 +743,7 @@ QQ群支持点击直接加入！
 修复：班级关闭后订单的可支付的错误；
 修复：关闭支付功能自定义提示的错误。
 
-6.1.0（2015-6-25） 
+6.1.0 (2015-6-25） 
 新增：新版教育云接入，支持云服务在线自助购买接入
 新增：简墨主题首页添加直播课栏目
 优化：小组 添加 面包屑导航
@@ -740,14 +758,14 @@ QQ群支持点击直接加入！
 
 6.0.6(2015-06-18)
 优化：添加“仅手机注册”的注册方式
-优化：添加首页和课程列表页课程的hover效果（诱惑点击）
+优化：添加首页和课程列表页课程的hover效果 (诱惑点击）
 优化：课程和班级中教师、助教“添加框”支持大小写搜索
 优化：班级活动地点改为非必填项
 优化：课程默认图片上传提示文案
 优化：添加视频课时时缺省名取视频文件名
 优化：上传课时文件时的错误提示优化
 优化：默认主题－简墨导航栏样式优化
-优化：鼠标hover名片出现效果（0.3秒延迟）
+优化：鼠标hover名片出现效果 (0.3秒延迟）
 优化：资讯标签显示和无评论提示
 优化：后台用户登录保护添加“同一IP连续错误密码”保护选项
 优化：系统应用更新日志添加翻页栏
@@ -763,14 +781,14 @@ QQ群支持点击直接加入！
 修复：IE、Firefox主题显示问题
 
 
-6.0.5（2015-6-15）
+6.0.5 (2015-6-15）
 * 修复：后台题库设置后手机App上的显示问题
 
-6.0.4（2015-6-12）
+6.0.4 (2015-6-12）
 * 修复：课程分类管理连接错误；
 * 修复：个人主页中在教课程显示错误；
 
-6.0.3（2015-6-11）
+6.0.3 (2015-6-11）
 * 优化：［在教课程］页面和管理员后台的［课程管理］页面中增加加［普通课程］和［班级课程］的快速筛选；
 * 优化：隐藏个人主页［在教课程］中班级课程；
 * 优化：默认简墨主题的一些样式。
@@ -778,17 +796,17 @@ QQ群支持点击直接加入！
 * 修复：学员账号在通知中点击查看试卷的链接地址错误；
 * 修复：未发布的课程，会显示在创建者个人主页的在教班级中，会引起访问异常；
 
-6.0.2（2015-6-9）
+6.0.2 (2015-6-9）
 ＊优化：班级简介中图片的显示；
 ＊优化：简墨轮播图链接设置；
 ＊优化：进一步优化ES6.0新增页面样式。
 ＊修复：新建班级中笔记显示的错误；
 ＊修复：推荐课程在最新课程中显示的错误。
 
-6.0.1（2015-6-7）
+6.0.1 (2015-6-7）
 *修复：对6.0.0升级后的数据进行修复
 
-6.0.0（2015-6-7）
+6.0.0 (2015-6-7）
 班级全面优化升级
   * 新增：原先是商业应用，现在开放为通用版固有功能
   * 新增：增加了助教角色，教师团队包含班主任、课程老师和助教
@@ -810,24 +828,24 @@ QQ群支持点击直接加入！
 * 新增：资讯的评论和点赞
 * 优化：未发布的课时不再能点击进入
 
-5.5.11（2015-6-3）
+5.5.11 (2015-6-3）
 * 修复：根据后台配置用户不需要登入，免费课时预览可以观看的问题
 
-5.5.10（2015-5-30）
+5.5.10 (2015-5-30）
 * 修复：浏览器图标无法上传icon图标
 * 修复：课程管理-文件管理，无法删除本地文件
 * 修复：开启手机或邮箱注册后，新用户无法第三方登录
 * 修复：本地文件不应该显示“未转码”的问题
 
-5.5.9（2015-5-22）
+5.5.9 (2015-5-22）
 * 修复：修复视频课时看完后不会自动标识为“学完了”的问题
 
-5.5.8（2015-5-19）
+5.5.8 (2015-5-19）
 * 修复：修复某些情况下用优惠码购买会员失败的问题
 
-5.5.7（2015-5-17）
+5.5.7 (2015-5-17）
 * 优化：订单处理逻辑优化
-  * 优化：我的订单中增加取消订单（即关闭订单）的操作
+  * 优化：我的订单中增加取消订单 (即关闭订单）的操作
   * 优化：订单关闭时，支持同步关闭相对应的支付宝订单
   * 优化：同一课程重复创建订单时，不关闭老订单
   * 优化：同一个课程，多次支付时，记录日志备查
@@ -836,7 +854,7 @@ QQ群支持点击直接加入！
   * 优化：退款的订单计算到课程的总收入中
 * 修复：修复html编辑区上传文件的问题
 
-5.5.6（2015-5-14）
+5.5.6 (2015-5-14）
 * 新增：支持文档课时防复制
 * 优化：编辑区的问题修复和优化
   * 优化：多行文本编辑区的输入框改成可以拖动改变大小
@@ -849,33 +867,33 @@ QQ群支持点击直接加入！
 * 修复：后台用户管理中用户头像无法上传、会员等级图片无法上传的问题
 * 修复：免费课程的列表中出现了标有虚拟币价格的课程
 
-5.5.5（2015-5-13）
+5.5.5 (2015-5-13）
 * 修复：修复图片上传后裁剪出错的问题
 
-5.5.4（2015-5-11）
+5.5.4 (2015-5-11）
 * 修复：某些插件无法安装的问题
 
-5.5.3（2015-5-11）
+5.5.3 (2015-5-11）
 * 修复：直播logo、网站logo、浏览器图标在某些浏览器下不能上传
 * 修复：我的已学完课程中的学习时长显示问题
 
-5.5.2（2015-5-8）
+5.5.2 (2015-5-8）
 * 修复：升级编辑区的数据
 * 修复：特定情况下用户无法导入的问题
 
-5.5.1（2015-5-8）
+5.5.1 (2015-5-8）
 * 优化：登录注册样式修正及文案优化
 
-5.5.0（2015-5-8）
+5.5.0 (2015-5-8）
 * 新功能：手机注册，可支持通过手机号码注册登录
 * 优化：编辑区内容的编辑方式优化
 * 修复：直播课程添加试卷课时后无法删除试卷课时
 * 修复：课程默认图片的尺寸不正确的问题
 
-5.4.3 （2015-5-8）
+5.4.3  (2015-5-8）
 * 修复：用户登录错别字修正
 
-5.4.2 （2015-4-30）
+5.4.2  (2015-4-30）
 * 优化：教学资料分享后，被分享的老师会收到系统通知
 * 优化：“作业批改”和“试卷批阅”的称谓固化统一
 * 修复：在后台教育云菜单下，恢复云视频账单的显示
@@ -886,10 +904,10 @@ QQ群支持点击直接加入！
 * 修复：作业预览和试卷预览中，状态显示的样式统一，按钮状态统一
 * 修复：云直播有效期显示不正常的问题
 
-5.4.1（2015-4-29）
+5.4.1 (2015-4-29）
 * 修复：云直播到期日期显示不正确的问题
 
-5.4.0（2015-4-23）
+5.4.0 (2015-4-23）
 * 新功能：网校管理功能调整
   * 新增教育云，
   * 新增网校公告功能，提供站内通知渠道
@@ -898,16 +916,16 @@ QQ群支持点击直接加入！
 * 修复：特定情况下直播课程名额已满的情况下可以加入课程的问题
 * 修复：批改作业时的文案错误问题
 
-5.3.3（2015-4-20）
+5.3.3 (2015-4-20）
 * 修复：网校后台查看视频相关数据趋势报错的问题
 
-5.3.2（2015-4-14）
+5.3.2 (2015-4-14）
 * 修复：特定情况下学习卡生成失败的问题
 
-5.3.1（2015-4-14）
+5.3.1 (2015-4-14）
 * 修复：个别用户升级到５.3.0后，课程页可能会报错误的问题
 
-5.3.0（2015-4-10）
+5.3.0 (2015-4-10）
 * 新功能：支持打折工具
    * 支持一定课程限时打折
    * 支持全站课程限时打折
@@ -919,10 +937,10 @@ QQ群支持点击直接加入！
 * 修复：IE8下JS错误的问题
 * 修复：特定情况下视频时长统计错误的问题
 
-5.2.4（2015-4-7）
+5.2.4 (2015-4-7）
 * 优化：站外分享插件
 
-5.2.3（2015-4-2）
+5.2.3 (2015-4-2）
 * 优化：课程学习数据的统计规则
 * 优化：直播管理设置
 * 优化：已关闭课程的站内信息处理
@@ -934,15 +952,15 @@ QQ群支持点击直接加入！
 * 修复：课程取消“会员免费学”后会员无法学习课程的问题
 * 修复：试卷批阅可以输入高于设置分数的问题
 
-5.2.2（2015-3-30）
+5.2.2 (2015-3-30）
 * 优化：升级系统依赖的库
 
-5.2.1（2015-3-30）
+5.2.1 (2015-3-30）
 * 优化：订单页面优惠码使用流程
 * 优化：添加/编辑页面的显示优化
 * 修复：特定情况下手机端无法关闭注册的问题
 
-5.2.0（2015-3-26）
+5.2.0 (2015-3-26）
 * 新功能：直播课程新增试卷功能
 * 新功能：课程搜索及分类页面新增免费课程筛选功能
 * 新功能：问答题编辑器上传图片功能
@@ -955,10 +973,10 @@ QQ群支持点击直接加入！
 * 修复：订单详情页文案错误问题
 * 修复：订单详情页链接错误问题
 
-5.1.5（2015-3-25）
+5.1.5 (2015-3-25）
 * 修复：多出文案错误问题
 
-5.1.4（2015-3-19）
+5.1.4 (2015-3-19）
 * 优化：课程加入前详情页面显示
 * 优化：课程删除的方式
 * 优化：免费课时预览
@@ -970,12 +988,12 @@ QQ群支持点击直接加入！
 * 修复：特定情况下通过技术手段注册的问题
 * 修复：文档课时下”学完了“提示显示问题
 
-5.1.3（2015-3-13）
+5.1.3 (2015-3-13）
 * 优化：用户手机号唯一性设置
 * 修复：特定情况下注册不显示带格式手机号字段问题
 * 修复：默认主题B教师团样式错误的问题
 
-5.1.2（2015-3-12）
+5.1.2 (2015-3-12）
 * 优化：课程设置中关于有效期和班级的设置项
 * 优化：云短信的字数限制和文案提示
 * 优化：我的账户顶部图片显示
@@ -984,11 +1002,11 @@ QQ群支持点击直接加入！
 * 修复：特定情况下超时订单无法关闭的问题
 * 修复：特定情况下进入小组提示错误的问题
 
-5.1.1（2015-3-11）
+5.1.1 (2015-3-11）
 * 修复：未设置支付密码时不需要短信验证
 * 修复：未设置安全问题时，找回支付密码的错误
 
-5.1.0（2015-3-11）
+5.1.0 (2015-3-11）
 * 新功能：支持云短信服务
  * 支持注册时使用短信验证
  * 支持用户绑定手机
@@ -1014,10 +1032,10 @@ QQ群支持点击直接加入！
 * 优化：更换新编辑器
 * 优化：试卷发布时的提示文案
 
-4.9.1（2015-2-2）
+4.9.1 (2015-2-2）
 * 优化：直播课时图标展示
 
-4.9.0（2015-2-1）
+4.9.0 (2015-2-1）
 * 新功能：新增文档课时类型
   * 支持doc、docx类型文档
   * 支持PDF类型文档
@@ -1027,13 +1045,13 @@ QQ群支持点击直接加入！
 * 修复：特定情况下出现的课程复制后图片未显示的问题
 * 优化：邮箱验证后的登录流程
 
-4.8.2（2015-1-28）
+4.8.2 (2015-1-28）
 * 修复：修复特定情况下验证码验证失效的问题
 
-4.8.1（2015-1-26）
+4.8.1 (2015-1-26）
 * 修复：修复特定情况下购买会员出现订单价格不匹配的问题
 
-4.8.0 （2015-1-23）
+4.8.0  (2015-1-23）
 * 新功能：设置未通过邮箱验证的用户无法登录的功能
 * 新功能：设置学员和课程章节自定义名称的功能
 * 新功能：支持第三方oAuth2登录接口扩展
@@ -1042,14 +1060,14 @@ QQ群支持点击直接加入！
 * 修复：特定情况下用户无法退出的问题
 * 修复：特定情况下浏览器标题重复的问题
 
-4.7.11（2015-1-20）
+4.7.11 (2015-1-20）
 * 优化：优化支付宝接口设置
 * 优化：优化教育云充值快捷入口
 
-4.7.10（2015-1-18）
+4.7.10 (2015-1-18）
 * 修复：部分安卓机型Web浏览器无法播放云视频的问题
 
-4.7.9（2015-1-15）
+4.7.9 (2015-1-15）
 * 优化：课程问答回复
 * 优化：网站底部商标
 * 优化：新增云平台充值帮助
@@ -1057,40 +1075,40 @@ QQ群支持点击直接加入！
 * 修复：手动验证邮箱内容错误的问题
 * 修复：火狐浏览器小组背景图显示问题
 
-4.7.8（2015-1-14）
+4.7.8 (2015-1-14）
 * 优化：优化安装升级插件和主题的过程
 
-4.7.7（2015-1-8）
+4.7.7 (2015-1-8）
 * 新功能：新增云平台账户充值快捷入口
 * 优化：优化教师进入直播课程的限制
 * 优化：创建试卷时各题型的数量显示
 * 优化：用户登录日志查询的搜索
 * 修复：IE9 、IE10下PPT课时无法全屏的问题
 
-4.7.6（2015-1-7）
+4.7.6 (2015-1-7）
 * 优化：后台课程价格隐藏设置的文案优化
 * 优化：支付宝担保交易下，用户出现多条账单通知的问题
 * 修复：邮箱服务器设置无法修改提交的问题
 
-4.7.5（2015-1-7）
+4.7.5 (2015-1-7）
 * 修复：直播课时页面ico显示错误的问题
 * 修复：小组话题内容因特殊符号被隐藏的问题
 
-4.7.4（2015-1-6）
+4.7.4 (2015-1-6）
 * 修复：免费PPT课时预览错误问题
 
-4.7.3（2015-1-5）
+4.7.3 (2015-1-5）
 * 修复：修复特定情况使用优惠码出现的问题
 
-4.7.2（2015-1-5）
+4.7.2 (2015-1-5）
 * 优化：优化云视频账单的数据显示
 * 优化：优化情况下移动端APP云视频播放不流畅的问题
 * 修复：修复特殊价格下，订单价格不匹配的问题
 
-4.7.1  （2015-1-5）
+4.7.1   (2015-1-5）
 * 修复：作业未安装情况下，课程页面出现特定错误的问题
 
-4.7.0  （2015-1-4）
+4.7.0   (2015-1-4）
 * 新功能：推出网校支付中心功能
    *  新增网校支付中心
    *  新增网校订单中心
@@ -1105,58 +1123,58 @@ QQ群支持点击直接加入！
 * 优化：含免费视频课时的页面显示
 * 优化：含有作业练习课时的显示
 
-4.6.6  （2015-1-4）
+4.6.6   (2015-1-4）
 * 优化：账单数据升级
 
-4.6.5  （2015-1-4）
+4.6.5   (2015-1-4）
 * 优化：账单数据升级
 
-4.6.4  （2015-1-4）
+4.6.4   (2015-1-4）
 * 优化：账单数据升级
 
-4.6.3  （2015-1-4）
+4.6.3   (2015-1-4）
 * 优化：账单数据升级
 
-4.6.2（2014-12-18）
-* 优化：优化素材库开启状态下，可以从课程文件（在本课程的文件管理中上传的文件）选择添加课时文件
+4.6.2 (2014-12-18）
+* 优化：优化素材库开启状态下，可以从课程文件 (在本课程的文件管理中上传的文件）选择添加课时文件
 * 优化：优化网校后台课程管理中搜索功能
 * 修复：修复素材库特定情况下部分图片文件不能预览的问题
 * 修复：修复课程文件管理中备用文件的使用状态错误提示问题
 * 修复：观看视频课时时学习数据重复提交的问题
 
-4.6.1 （2014-12-16）
+4.6.1  (2014-12-16）
 * 修复：修复教学资料库在某些版本下会出现打不开我的分享历史的错误
 
-4.6.0 （2014-12-11）
+4.6.0  (2014-12-11）
 * 新功能：支持网校课程复制
 * 优化：优化网校课程搜索功能
 * 修复：修复课时管理操作在特定情况下出现的页面混乱问题
 * 修复：修复非直播课程出现直播助手下载地址的问题
 
-4.5.5（2014-12-9）
+4.5.5 (2014-12-9）
 * 修复：特定条件下，无法添加／编辑课时的问题
 
-4.5.4（2014-12-4）
+4.5.4 (2014-12-4）
 * 新功能：用户账号保护机制
 * 优化：增加收藏课程和开始学习的学习动态
 * 优化：优化课程详情页操作按钮展示
 * 修复：修复教师、管理员查看题目解析的问题
 * 修复：修复填空题输入空格导致答案错误的问题
 
-4.5.3（2014-12-02）
+4.5.3 (2014-12-02）
 * 修复：修复没有安装资料库插件时，添加课时资料错误的问题
 
-4.5.2（2014-11-28）
+4.5.2 (2014-11-28）
 * 修复：修复课程学习数据的文案样式问题
 
-4.5.1（2014-11-27）
+4.5.1 (2014-11-27）
 * 新功能：新增资讯阅读数展示
 * 新功能：新增小组收藏话题的功能
 * 优化：优化最热话题排序规则
 * 修复：修复用户关注限制的问题
 * 修复：修复特殊情况下编辑课程详细信息错误的问题
 
-4.5.0（2014-11-20）
+4.5.0 (2014-11-20）
 * 新功能：新增网校虚拟币功能
   * 自定义网校虚拟币名称
   * 使用虚拟币购买课程
@@ -1168,16 +1186,16 @@ QQ群支持点击直接加入！
 * 修复：修复材料题无子题情况下被引用的问题
 * 修复：课程唯一教师可以删除的问题
 
-4.4.7（2014-11-18）
+4.4.7 (2014-11-18）
 * 修复：修复4.4.6版本的安装包引发的课程保存问题
 
-4.4.6（2014-11-14）
+4.4.6 (2014-11-14）
 * 新功能：新增自定义直播课程logo展示功能
 
-4.4.5（2014-11-14）
+4.4.5 (2014-11-14）
 * 修复：修复验证码可能存在的问题
 
-4.4.4（2014-11-13）
+4.4.4 (2014-11-13）
 * 新功能：新增注册验证码功能
 * 新功能：新增自定义直播课程logo展示功能
 * 新功能：新增用户课程订单取消功能
@@ -1187,24 +1205,24 @@ QQ群支持点击直接加入！
 * 修复：修复后台首页受欢迎课程排序问题
 * 修复：修复讨论区提示错误问题
 
-4.4.3（2014-11-10）
+4.4.3 (2014-11-10）
 * 修复：修复后台应用按钮错误
 
-4.4.2（2014-11-09)
+4.4.2 (2014-11-09)
 * 新功能：增加会员到期及课程到期时的通知
 * 新功能：增加用户身份变更的通知
-* 优化：无效课时（课时文件被删除）的标签提示
+* 优化：无效课时 (课时文件被删除）的标签提示
 * 优化：隐藏题库管理未被使用的题目类别管理
 * 修复：管理员封禁用户的权限问题
 * 修复：首页顶部导航关闭状态失效的问题
 * 修复：修复特定状态下无法退出课时的问题
 * 修复：课程不能重复购买的问题
 
-4.4.1（2014-11-04）
+4.4.1 (2014-11-04）
 * 新功能：已购买去版权服务的用户，可在后台授权码设置那修改版权信息
 * 修复：文案修正
 
-4.4.0（2014-10-30）
+4.4.0 (2014-10-30）
 * 新功能：增加点击图片预览课时功能
 * 新功能：课程讨论区新增回复其他用户的功能
 * 新功能：系统后台首页增加官方通知功能
@@ -1213,20 +1231,20 @@ QQ群支持点击直接加入！
 * 优化：优化网校课程搜索功能
 * 修复：修改部分网校帮助页面链接地址
 
-4.3.2 （2014-10-28）      
+4.3.2  (2014-10-28）      
 * 优化：优化直播验证机制
 * 优化：更新直播新方案的桌面助手
 
-4.3.1（2014-10-28）                      
+4.3.1 (2014-10-28）                      
 * 修复：修复MYSQL严格模式下查看后台视频课时数据的问题
 
-4.3.0（2014-10-26）
+4.3.0 (2014-10-26）
 * 新功能：直播课程提供新的解决方案
-* 网校可切换原有方案和新方案（须向EduSoho官方备注）
+* 网校可切换原有方案和新方案 (须向EduSoho官方备注）
 * 适应多种带宽条件下的直播
 * 新增师生直播页
 
-4.2.0 （2014-10-23）
+4.2.0  (2014-10-23）
 *新功能：课程以及学员的相关学习数据，
 *新功能：视频课时的记忆播放功能
 *新功能：图文课时自动保存
@@ -1236,19 +1254,19 @@ QQ群支持点击直接加入！
 *优化：服务器无法检测到更新版本时的文案提示
 *修复：管理员无法管理教师用户的问题
 
-4.1.1（2014-10-18）
+4.1.1 (2014-10-18）
 * 优化：游客回复小组时，登录提示的优化
 * 优化：用户注册后跳转页面的优化
 * 修复：修复取消推荐后会引起课程标签按推荐排序时错乱的问题
 
-4.1.0（2014-10-15）
+4.1.0 (2014-10-15）
 * 新功能：支持阔知学堂手机客户端V2.0
 
-4.0.4（2014-10-13）
+4.0.4 (2014-10-13）
 * 优化：系统后台云平台设置优化
 * 修复：修复特殊系统环境下考试无法提交的问题
 
-4.0.3（2014-10-09）
+4.0.3 (2014-10-09）
   * 新功能：增加课程学员的搜索功能
   *  优化：新增教师完善资料的提示
   *  优化：优化站内分享插件的第三方平台选择以及未购买课程的分享
@@ -1258,14 +1276,14 @@ QQ群支持点击直接加入！
   *  修复：已关闭的课程的显示样式问题
   *  修复：系统后台首页受欢迎课程的排版问题
 
-4.0.2 （2014-09-28）
+4.0.2  (2014-09-28）
   * 修复：360浏览器7.1下，添加课时，上传视频文件无法正确上传的问题
 
-4.0.1 （2014-09-26）
+4.0.1  (2014-09-26）
   * 优化：小组组长权限控制改进
   * 优化：提高音频上传大小限制以及音频课时文案提示
 
-4.0.0 （2014-09-24）
+4.0.0  (2014-09-24）
 * 新功能：教育云视频解决方案全线升级
   * 视频加密方案升级，提升视频版权保护
   * 视频转码算法升级，提高视频转码速度
@@ -1282,20 +1300,20 @@ QQ群支持点击直接加入！
 * 优化：在学课时定位显示
 * 优化：清秋主题、默认主题、默认主题B无数据区域的显示
 
-3.7.7（2014-09-19）
+3.7.7 (2014-09-19）
 * 优化：权限判断优化
 * 修复：IE11上添加课时，无法上传视频的问题
 
-3.7.6（2014-09-17）
+3.7.6 (2014-09-17）
 * 修复：一处非授权访问引起的问题
 
-3.7.5（2014-09-16）
+3.7.5 (2014-09-16）
 * 修复：云视频断点续传后有可能会导致转码失败的问题
 
-3.7.4（2014-09-04）
+3.7.4 (2014-09-04）
 * 修复：课程讨论区回复bug
 
-3.7.3（2014-09-04）
+3.7.3 (2014-09-04）
 * 优化：小组SEO优化
 * 优化：优化文件上传时的文案提示
 * 优化：优化章节中快速添加课时按钮显示
@@ -1303,13 +1321,13 @@ QQ群支持点击直接加入！
 * 修复：课程中外站视频课时学习完成后提示的显示问题
 * 修复：后台应用升级问题
 
-3.7.2（2014-09-02）
+3.7.2 (2014-09-02）
 * 修复：修复第三方登录bug
 
-3.7.1（2014-09-01）
+3.7.1 (2014-09-01）
 * 优化：小组页面底部导航优化
 
-3.7.0（2014-09-01）
+3.7.0 (2014-09-01）
 * 新功能：小组功能
    * 支持网校创建小组，管理小组
    * 支持学员加入小组，发布话题，回复话题
@@ -1322,7 +1340,7 @@ QQ群支持点击直接加入！
 * 修复：课程问答区和讨论区的发帖bug
 * 修复：日期组件的bug
 
-3.6.0（2014-08-21）
+3.6.0 (2014-08-21）
 * 新功能：直播课程的录制以及生成回放课程
 * 新功能：自助客服功能
    *提供微信、QQ、电话、Email等客服联系方式
@@ -1331,10 +1349,10 @@ QQ群支持点击直接加入！
 * 优化：后台订单管理页面查看订单详情的文案优化
 * 修复：添加课程图片页面的文案错误提示 
 
-3.5.1（2014-08-15）
+3.5.1 (2014-08-15）
  * 修复：后台自定义字段无法编辑的问题
 
-3.5.0（2014-08-14）
+3.5.0 (2014-08-14）
  * 新功能：用户批量导入
    * 可批量导入系统默认的用户字段数据
    * 可批量导入网校自定义的用户字段数据
@@ -1464,7 +1482,7 @@ QQ群支持点击直接加入！
     * 支持学习视频课程、音频课程、图文课程
     * 支持搜索、浏览、查看各种形式的课程
     * 可购买/加入/退出/收藏/评价课程
-    * 支持登录（扫描二维码登录）/注册/退出
+    * 支持登录 (扫描二维码登录）/注册/退出
     * 网校管理后台相应的设置功能，可开启/关闭手机客户端
 
 3.0.4  (2014-06-12)
