--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 CHANGELOG
 =========
+6.17.20 (2016-7-14）
+新增：邮箱服务器配置验证功能，支持校验邮箱服务器是否配置正确
+优化：课程课时管理列表显示，明确显示课时中包含练习，作业，资料
+优化：修改密码交互优化
+
 6.17.19 (2016-7-7）
 新增：课程管理会员课程分类
 优化：创建/编辑第三方视频课时操作流程
