--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 CHANGELOG
 =========
+6.17.21 (2016-7-16）
+修复：考试记录中未批阅的试卷能再做一次的bug
+
 6.17.20 (2016-7-14）
 新增：邮箱服务器配置验证功能，支持校验邮箱服务器是否配置正确
 优化：课程课时管理列表显示，明确显示课时中包含练习，作业，资料
