--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 CHANGELOG
 =========
 6.17.21 (2016-7-16）
-修复：考试记录中未批阅的试卷能再做一次的bug
+修复：试卷未批阅状态下可再做一次的问题
 
 6.17.20 (2016-7-14）
 新增：邮箱服务器配置验证功能，支持校验邮箱服务器是否配置正确
