--- a/src/Topxia/WebBundle/Resources/translations/messages.ug_CN.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.ug_CN.yml
@@ -777,7 +777,7 @@ flash课程: 'flash دەرسلىك'
 'Flash课时需要开通EduSoho云视频服务才能使用,': 'Flash دەرسنى EduSoho بۇلۇت فىلىم مۇلازىمىتىنى قوزغاتقاندا ئاندىن ئىشلىتەلەيسىز، '
 视频时长或: 'فىلىم ئۇزۇنلىقى ياكى'
 秒: سىكونت
-时长必须为整数。: 'ئۇزۇنلىقى چوقۇم پۈتۈن سان بولسۇن'
+时长必须为非负整数: 'فىلىم ئۇزۇنلۇقى چوقۇم مۇسبەت پۈتۈن سان بولسۇن'
 学完此课时，可获得的学分: 'بۇ دەرسنى ئۆگىنىپ بولسىڭىزلا ئۆگىنىش نومۇرىغا ئېرشىسىز'
 建议学习时长: 'ئۆگىنىش ۋاقتىغا تەكلىپ'
 小时: سائەت
