--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,24 @@
 CHANGELOG
 =========
+7.0.0（2016-7-27）
+新功能：公开课
+ * 录播和直播公开课的创建管理
+ * 公开课的pc端和微信端预览
+ * 相关推荐课程设置
+ * 专门的微信端展示分享页面
+ * 直播公开课提醒设置和短信通知
+ * 公开课的后台管理、推荐、数据统计
+
+新功能：气球云播放器2.0
+ * 支持老版播放器的所有功能特性
+ * 全新UI，适配多种主流分辨率
+ * 新版视频弹题功能
+ * 新增倍速播放功能
+ * 新增各种适用于学习场景的播放控制功能（后退、前进、全屏等）
+ * 新增各种状态提示反馈（卡顿、清晰度切换、记忆播放等）
+
+优化：图文编辑器（课程简介、图文课时、资讯、自定义页面）开放高级源码功能
+
 6.17.26(2016-7-22）
 修复：特定情况下新用户注册邮箱验证页面跳转错误的问题
 
