--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -1296,8 +1296,8 @@ Email地址: Email address
 请再输入一次密码: re-enter your ypassword
 支付中心: payment center
 订单支付成功，将在 <span class="js-countdown">3</span> 秒后跳转</p>: order payment successed, jump within …seconds
-由于网校使用的为“担保交易”，因此需要您去支付宝网站对本次购买做“确认收货”操作（系统已自动完成虚拟发货），确认后即支付成功，即可进入课程学习。: "as network school use ""secured transaction"",you need to ""CINFIRM RECEIPT"" at Alipay website(system has virtually delivered the goods), after confirmation the payment will be successed, and you can start learning the courses"
-由于您在支付时选择的交易方式是“担保交易”，因此需要您去支付宝网站对本次购买做“确认收货”操作（系统已自动完成虚拟发货），确认后即支付成功，即可进入课程学习。: "as you used ""secured transaction"" for payment,you need to ""CINFIRM RECEIPT"" at Alipay website(system has virtually delivered the goods), after confirmation the payment will be successed, and you can starting learning the courses"
+由于网校使用的为“担保交易”，因此需要您去支付宝网站对本次购买做“确认收货”操作（系统已自动完成虚拟发货），确认后即支付成功，即可进入课程学习。: as network school use "secured transaction",you need to "CINFIRM RECEIPT" at Alipay website(system has virtually delivered the goods), after confirmation the payment will be successed, and you can start learning the courses
+由于您在支付时选择的交易方式是“担保交易”，因此需要您去支付宝网站对本次购买做“确认收货”操作（系统已自动完成虚拟发货），确认后即支付成功，即可进入课程学习。: as you used "secured transaction" for payment,you need to "CINFIRM RECEIPT" at Alipay website(system has virtually delivered the goods), after confirmation the payment will be successed, and you can starting learning the courses
 核实银行预留手机: confirm the bank reserved mobile phone
 银行预留手机号: bank reserved mobile phone number
 订单已提交，请在４８小时内完成支付！逾期订单将被取消。: order has been submitted, please complish the payment within 48 hours
